--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 :root {
-  --primary-color: #20609d;
-  --secondary-color: #ed6911;
+  --primary-color: #57cbff;
   --dark-navy: #020c1b;
   --navy: #0a192f;
   --light-navy: #112240;
@@ -10,11 +9,7 @@
   --slate: #8892b0;
   --light-slate: #a8b2d1;
   --lightest-slate: #ccd6f6;
-  --white: #e6f1ff;
-  --green: #64ffda;
   --green-tint: rgba(100, 255, 218, 0.1);
-  --pink: #f57dff;
-  --blue: #57cbff;
   --font-sans: 'Calibre', 'Inter', 'San Francisco', 'SF Pro Text', -apple-system,
     system-ui, sans-serif;
   --font-mono: 'SF Mono', 'Fira Code', 'Fira Mono', 'Roboto Mono', monospace;
