Make common h2 style DRY

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,16 @@ html {
   overflow-x: hidden;
 }
 
+h2 {
+  font-size: clamp(1.5rem, 4vw, 2.5rem);
+  padding-bottom: 1rem;
+  color: black;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: var(--lightest-slate);
+  letter-spacing: 0.4rem;
+}
+
 @media screen and (max-width: 280px) and (max-width: 1080px) {
   body::-webkit-scrollbar {
     display: none;
